Version 2.03.06 - 
================================
  Synchronize with udev when dropping snapshot.
  Add missing device synchronization point before removing pvmove node.
  Correctly set read_ahead for LVs when pvmove is finished.
  Remove unsupported OPTIONS+="event_timeout" udev rule from 11-dm-lvm.rules.
  Prevent creating VGs with PVs with different logical block sizes.
  Fix metadata writes from corrupting with large physical block size.

Version 2.03.05 - 15th June 2019
================================
  Fix command definition for pvchange -a.
  Add vgck --updatemetadata command that will repair metadata problems.
  Improve VG reading to work if one good copy of metadata is found.
  Report/display/scan commands that read VGs will no longer write/repair.
  Move metadata repairs from VG reading to VG writing.
  Add config setting md_component_checks to control MD component checks.
  Add end of device MD component checks when dev has no udev info.

Version 2.03.04 - 10th June 2019
================================
  Remove unused_duplicate_devs from cmd causing segfault in dmeventd.

Version 2.03.03 - 07th June 2019
================================
  Report no_discard_passdown for cache LVs with lvs -o+kernel_discards.
  Add pvck --dump option to extract metadata.
  Fix signal delivery checking race in libdaemon (lvmetad).
  Add missing Before=shutdown.target to LVM2 services to fix shutdown ordering.
  Skip autoactivation for a PV when PV size does not match device size.
  Remove first-pvscan-initialization which should no longer be needed.
  Add remote refresh through lvmlockd/dlm for shared LVs after lvextend.
  Ignore foreign and shared PVs for pvscan online files.
  Add config setting to control fields in debug file and verbose output.
  Add command[pid] and timestamp to debug file and verbose output.
  Fix missing growth of _pmsmare volume when extending _tmeta volume.
  Automatically grow thin metadata, when thin data gets too big.